--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -43,5 +43,14 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
+  <script>
+    (function() {
+      if("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./serviceworker.js")
+        .then(() => console.log("Service Worker Registered Successfully."))
+        .catch(error => console.log("Service Worker registration failed:", error));
+      }
+    })();
+  </script>
 </body>
 </html>
